[package]
name = "cran-fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
cran-description-file-parser.workspace = true
anyhow = "1.0.93"
flate2 = "1.0.35"
reqwest = { version = "0.12.9", features = ["blocking"] }
tar = "0.4.43"
tokio = { version = "1.41.1", features = ["full"] }
scraper = "0.21.0"
clap = { version = "4.5.21", features = ["derive"] }
pubgrub = "0.2.1"
bimap = "0.6.3"
ecow = "0.2.3"
bytes = "1.9.0"
