[package]
name = "crancherry"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0.35"
miette = { version = "7.4.0", features = ["fancy"] }
thiserror = "2.0.6"
cran-description-file-parser.workspace = true
ecow = "0.2.3"
ureq = "2.12.1"
scraper = "0.22.0"
tar = "0.4.43"
serde = { version = "1.0.216", features = ["derive"] }
serde_yaml = "0.9.34"
