[package]
name = "deliver"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["derive"] }
flate2 = "1.0.35"
miette = { version = "7.4.0", features = ["fancy"] }
reqwest = "0.12.10"
tokio = { version = "1.42.0", features = ["full"] }
toml_edit = { version = "0.22.22", features = ["serde"] }
cran-description-file-parser.workspace = true
serde = { version = "1.0.216", features = ["derive"] }
petgraph = "0.6.5"
fs-err = "3.0.0"
scraper = "0.22.0"
tar = "0.4.43"
ecow = "0.2.3"
md-5 = "0.10.6"
elsa = "1.10.0"
rayon = "1.10.0"
serde_json = "1.0.138"
nix = { version = "0.29.0", features = ["signal"] }

