[package]
name = "description-file-crater"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = "2.10.1"
cran-description-file-parser.workspace = true
anyhow = { version = "1.0.93", features = ["backtrace"] }
flate2 = "1.0.35"
tar = "0.4.43"
serde = { version = "1.0.215", features = ["derive"] }
toml_edit = "0.22.22"
clap = { version = "4.5.21", features = ["derive"] }
heck = "0.5.0"
