[package]
name = "description-file-crater"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = "2.10.1"
cran-description-file-parser.workspace = true
crancherry.workspace = true
serde = { version = "1.0.215", features = ["derive"] }
miette = { version = "7.4.0", features = ["fancy"] }
toml = "0.8.19"
fs-err = "3.0.0"
